# movies_loyalty_program

./: .env.example  .env_local  .env_test  Makefile  README.md  docker-compose-base.yml  docker-compose-local.yml  docker-compose-prod.yml  pyproject.toml
loyalty_api/: .env.example  .env_local  .env_test  Dockerfile  pyproject.toml  run.sh
loyalty_api/migrations/: 20230704_01_QteZZ-init.py  20230704_02_QsL9h-loyalty-points.py  20230708_01_9dRbv-add-column-activations-cnt.py  20230709_01_Re5LV-rename-column_activated_dt.py  20230709_02_ERJiu-add-column-updated-dt.py  20230711_01_LImWQ-add-table-user-promos.py  20230711_02_dlGwt-drop-column-user-ids.py  20230712_01_64EuY-add-column-linked-to-user.py
loyalty_api/src/: app.py  containers.py
loyalty_api/src/api/models/: base.py  loyalty_cards.py  promo.py
loyalty_api/src/api/srv/: routers.py
loyalty_api/src/api/srv/endpoints/: loyalty_cards.py  promos.py  technical.py
loyalty_api/src/api/v1/: routers.py
loyalty_api/src/api/v1/endpoints/: loyalty_cards.py  promos.py
loyalty_api/src/common/: decode_auth_token.py  promo.py  ratelimiter.py
loyalty_api/src/common/clients/: amqp_sender.py
loyalty_api/src/common/connectors/: amqp.py  db.py  redis.py
loyalty_api/src/common/repositories/: loyalty.py  queries.py
loyalty_api/src/common/services/: loyalty.py  loyalty_cards.py  promos.py
loyalty_api/src/settings/: __init__.py  amqp.py  app.py  db.py  loyalty_cards.py  promo.py  redis.py  tokens.py
loyalty_api/tests/: conftest.py
loyalty_api/tests/fake/: loyalty_cards.py  repository.py
loyalty_api/tests/src/srv/: test_create_promo.py  test_get_promo_status.py  test_get_promo_usage_history.py  test_loyalty_card.py  test_promo_activate.py  test_promo_deactivate.py  test_promo_info.py  test_promo_restore.py  test_promos.py
loyalty_api/tests/src/v1/: test_get_promo_status.py  test_loyalty_card.py  test_promo_activate.py  test_promo_deactivate.py  test_promo_restore.py  test_promo_status.py
loyalty_api/tests/vars/: auth.py  promos.py  tables.py
loyalty_controller/: .env.example  .env_local  .env_test  pyproject.toml
loyalty_controller/settings/: __init__.py  consumers.py  logger.py  sender.py  services.py
loyalty_controller/src/common/: utils.py
loyalty_controller/src/common/clients/: loyalty_api.py
loyalty_controller/src/workers/models/: loyalty_card.py
loyalty_controller/tests/utils/: amqp.py
loyalty_controller/tests/workers/: conftest.py
loyalty_controller/tests/workers/consumers/: test_calculation_of_points.py  test_deposit_points.py
(+23 files in other folders)
