[tool.poetry]
name = "loyalty-controller"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "loyalty_controller"}]

[tool.poetry.dependencies]
python = "~3.11"
aio-pika = "9.1.4"
ujson = "5.8.0"
aiomisc = "17.3.4"
orjson = "3.9.2"
punq = "0.6.2"
python-dotenv = "1.0.0"
dpath = "2.1.6"
pydantic = "1.10.11"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-asyncio = "0.21.1"
httpx = "0.24.1"
respx = "0.20.1"
# linters
black = "23.3.0"
isort = "5.12.0"
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
